--- a/build.gradle
+++ b/build.gradle
@@ -1,15 +1,15 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
-
 buildscript {
     repositories {
         jcenter()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.2.3'
-
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
     }
+}
+
+plugins {
+    id "com.jfrog.bintray" version "1.7.3"
+    id "com.github.dcendents.android-maven" version "1.4.1"
 }
 
 allprojects {
@@ -20,4 +20,39 @@ allprojects {
 
 task clean(type: Delete) {
     delete rootProject.buildDir
+}
+
+ext {
+
+    libraryVersion = '0.1.0'
+    supportLibsVersion = '25.1.0'
+
+    android = [
+            compileSdkVersion: 25,
+            buildToolsVersion: '25.0.0',
+            minSdkVersion    : 15,
+            targetSdkVersion : 25,
+            versionCode      : 1,
+    ]
+
+    bintrayRepo = 'android-maven'
+    bintrayName = 'databinding-helpers'
+    publishedGroupId = 'com.github.vielasis'
+
+    libraryName = 'databinding-helpers'
+    libraryDescription = 'Android databinding helpers for commonly used tasks'
+
+    artifact = 'databinding-helpers'
+
+    siteUrl = 'https://github.com/vielasis/databinding-helpers'
+    vcsUrl = 'https://github.com/vielasis/databinding-helpers.git'
+
+
+    developerId = 'vielasis'
+    developerName = 'Krystian Viel Asis'
+    developerEmail = 'its.viel@gmail.com'
+
+    allLicenses = ["Apache-2.0"]
+    licenseName = 'The Apache Software License, Version 2.0'
+    licenseUrl = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
 }
